ts-ruleflow/packages/dsl-core/src/generated/src/grammar/RuleFlowLanguageParser.ts
// Generated from src/grammar/RuleFlowLanguage.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { RuleFlowLanguageListener } from "./RuleFlowLanguageListener";
import { RuleFlowLanguageVisitor } from "./RuleFlowLanguageVisitor";


export class RuleFlowLanguageParser extends Parser {
	public static readonly STRING_NOT_SPECIAL_CHARS = 1;
	public static readonly DOT = 2;
	public static readonly COMMA = 3;
	public static readonly ADD = 4;
	public static readonly MINUS = 5;
	public static readonly MULTIPLY = 6;
	public static readonly DIVIDE = 7;
	public static readonly LT = 8;
	public static readonly LT_EQ = 9;
	public static readonly GT = 10;
	public static readonly GT_EQ = 11;
	public static readonly EQ_IC = 12;
	public static readonly EQ = 13;
	public static readonly NOT_EQ = 14;
	public static readonly MINUTE = 15;
	public static readonly HOUR = 16;
	public static readonly DAY = 17;
	public static readonly CURRENT_DATE = 18;
	public static readonly DATE_DIFF = 19;
	public static readonly ABS = 20;
	public static readonly REGEX_STRIP = 21;
	public static readonly MODULO = 22;
	public static readonly K_STARTS_WITH = 23;
	public static readonly K_LIST = 24;
	public static readonly L_BRACE = 25;
	public static readonly R_BRACE = 26;
	public static readonly L_PAREN = 27;
	public static readonly R_PAREN = 28;
	public static readonly K_COLON = 29;
	public static readonly K_ACTION = 30;
	public static readonly K_WORKFLOW = 31;
	public static readonly K_RULESET = 32;
	public static readonly K_RETURN = 33;
	public static readonly K_THEN = 34;
	public static readonly K_DEFAULT = 35;
	public static readonly K_WITH = 36;
	public static readonly K_END = 37;
	public static readonly K_ELSE = 38;
	public static readonly K_AND = 39;
	public static readonly K_OR = 40;
	public static readonly K_CONTAINS = 41;
	public static readonly K_IS = 42;
	public static readonly K_NOT = 43;
	public static readonly K_IS_NOT = 44;
	public static readonly K_IN = 45;
	public static readonly K_ANY = 46;
	public static readonly K_NONE = 47;
	public static readonly K_ALL = 48;
	public static readonly K_COUNT = 49;
	public static readonly K_AVERAGE = 50;
	public static readonly K_DISTINCT = 51;
	public static readonly K_NULL = 52;
	public static readonly DAY_OF_WEEK = 53;
	public static readonly K_EXPR = 54;
	public static readonly K_EVALUATION_MODE = 55;
	public static readonly K_MULTI_MATCH = 56;
	public static readonly K_SINGLE_MATCH = 57;
	public static readonly K_NOW = 58;
	public static readonly K_DATE = 59;
	public static readonly K_DATETIME = 60;
	public static readonly K_DATE_ADD = 61;
	public static readonly K_DATE_SUBTRACT = 62;
	public static readonly STRING_DISTANCE = 63;
	public static readonly PARTIAL_RATIO = 64;
	public static readonly TOKEN_SORT_RATIO = 65;
	public static readonly TOKEN_SET_RATIO = 66;
	public static readonly STRING_SIMILARITY_SCORE = 67;
	public static readonly GEOHASH_ENCODE = 68;
	public static readonly GEOHASH_DECODE = 69;
	public static readonly DISTANCE = 70;
	public static readonly WITHIN_RADIUS = 71;
	public static readonly NUMERIC_LITERAL = 72;
	public static readonly BOOLEAN_LITERAL = 73;
	public static readonly DQUOTA_STRING = 74;
	public static readonly SQUOTA_STRING = 75;
	public static readonly ID = 76;
	public static readonly SINGLE_LINE_COMMENT = 77;
	public static readonly MULTILINE_COMMENT = 78;
	public static readonly SPACES = 79;
	public static readonly UNEXPECTED_CHAR = 80;
	public static readonly RULE_parse = 0;
	public static readonly RULE_error = 1;
	public static readonly RULE_workflow = 2;
	public static readonly RULE_workflow_name = 3;
	public static readonly RULE_string_literal = 4;
	public static readonly RULE_rulesets = 5;
	public static readonly RULE_ruleset_condition = 6;
	public static readonly RULE_rules = 7;
	public static readonly RULE_rule_body = 8;
	public static readonly RULE_name = 9;
	public static readonly RULE_default_clause = 10;
	public static readonly RULE_configuration = 11;
	public static readonly RULE_evaluation_mode = 12;
	public static readonly RULE_return_result = 13;
	public static readonly RULE_state_rule = 14;
	public static readonly RULE_actions = 15;
	public static readonly RULE_action = 16;
	public static readonly RULE_action_params = 17;
	public static readonly RULE_param_pairs = 18;
	public static readonly RULE_param_pair = 19;
	public static readonly RULE_expr = 20;
	public static readonly RULE_geoExpr = 21;
	public static readonly RULE_dateExpr = 22;
	public static readonly RULE_propertyTuple = 23;
	public static readonly RULE_listElems = 24;
	public static readonly RULE_validValue = 25;
	public static readonly RULE_actionParamValue = 26;
	public static readonly RULE_dateParse = 27;
	public static readonly RULE_dateValue = 28;
	public static readonly RULE_timeUnit = 29;
	public static readonly RULE_validProperty = 30;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"parse", "error", "workflow", "workflow_name", "string_literal", "rulesets", 
		"ruleset_condition", "rules", "rule_body", "name", "default_clause", "configuration", 
		"evaluation_mode", "return_result", "state_rule", "actions", "action", 
		"action_params", "param_pairs", "param_pair", "expr", "geoExpr", "dateExpr", 
		"propertyTuple", "listElems", "validValue", "actionParamValue", "dateParse", 
		"dateValue", "timeUnit", "validProperty",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, "'.'", "','", "'+'", "'-'", "'*'", "'/'", "'<'", 
		"'<='", "'>'", "'>='", "'='", "'=='", "'<>'", "'minute'", "'hour'", "'day'", 
		undefined, undefined, "'abs'", undefined, undefined, undefined, "'list'", 
		"'{'", "'}'", "'('", "')'", "':'", "'action'", undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "'distance'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "STRING_NOT_SPECIAL_CHARS", "DOT", "COMMA", "ADD", "MINUS", 
		"MULTIPLY", "DIVIDE", "LT", "LT_EQ", "GT", "GT_EQ", "EQ_IC", "EQ", "NOT_EQ", 
		"MINUTE", "HOUR", "DAY", "CURRENT_DATE", "DATE_DIFF", "ABS", "REGEX_STRIP", 
		"MODULO", "K_STARTS_WITH", "K_LIST", "L_BRACE", "R_BRACE", "L_PAREN", 
		"R_PAREN", "K_COLON", "K_ACTION", "K_WORKFLOW", "K_RULESET", "K_RETURN", 
		"K_THEN", "K_DEFAULT", "K_WITH", "K_END", "K_ELSE", "K_AND", "K_OR", "K_CONTAINS", 
		"K_IS", "K_NOT", "K_IS_NOT", "K_IN", "K_ANY", "K_NONE", "K_ALL", "K_COUNT", 
		"K_AVERAGE", "K_DISTINCT", "K_NULL", "DAY_OF_WEEK", "K_EXPR", "K_EVALUATION_MODE", 
		"K_MULTI_MATCH", "K_SINGLE_MATCH", "K_NOW", "K_DATE", "K_DATETIME", "K_DATE_ADD", 
		"K_DATE_SUBTRACT", "STRING_DISTANCE", "PARTIAL_RATIO", "TOKEN_SORT_RATIO", 
		"TOKEN_SET_RATIO", "STRING_SIMILARITY_SCORE", "GEOHASH_ENCODE", "GEOHASH_DECODE", 
		"DISTANCE", "WITHIN_RADIUS", "NUMERIC_LITERAL", "BOOLEAN_LITERAL", "DQUOTA_STRING", 
		"SQUOTA_STRING", "ID", "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", "SPACES", 
		"UNEXPECTED_CHAR",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(RuleFlowLanguageParser._LITERAL_NAMES, RuleFlowLanguageParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return RuleFlowLanguageParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "RuleFlowLanguage.g4"; }

	// @Override
	public get ruleNames(): string[] { return RuleFlowLanguageParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return RuleFlowLanguageParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(RuleFlowLanguageParser._ATN, this);
	}
	// @RuleVersion(0)
	public parse(): ParseContext {
		let _localctx: ParseContext = new ParseContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, RuleFlowLanguageParser.RULE_parse);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 64;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case RuleFlowLanguageParser.K_WORKFLOW:
				{
				this.state = 62;
				this.workflow();
				}
				break;
			case RuleFlowLanguageParser.UNEXPECTED_CHAR:
				{
				this.state = 63;
				this.error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 66;
			this.match(RuleFlowLanguageParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public error(): ErrorContext {
		let _localctx: ErrorContext = new ErrorContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, RuleFlowLanguageParser.RULE_error);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 68;
			this.match(RuleFlowLanguageParser.UNEXPECTED_CHAR);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public workflow(): WorkflowContext {
		let _localctx: WorkflowContext = new WorkflowContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, RuleFlowLanguageParser.RULE_workflow);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 70;
			this.match(RuleFlowLanguageParser.K_WORKFLOW);
			this.state = 71;
			this.workflow_name();
			this.state = 73;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				{
				this.state = 72;
				this.configuration();
				}
				break;
			}
			this.state = 78;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === RuleFlowLanguageParser.K_RULESET) {
				{
				{
				this.state = 75;
				this.rulesets();
				}
				}
				this.state = 80;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 81;
			this.default_clause();
			this.state = 82;
			this.match(RuleFlowLanguageParser.K_END);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public workflow_name(): Workflow_nameContext {
		let _localctx: Workflow_nameContext = new Workflow_nameContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, RuleFlowLanguageParser.RULE_workflow_name);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 84;
			this.match(RuleFlowLanguageParser.STRING_NOT_SPECIAL_CHARS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public string_literal(): String_literalContext {
		let _localctx: String_literalContext = new String_literalContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, RuleFlowLanguageParser.RULE_string_literal);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 86;
			_la = this._input.LA(1);
			if (!(_la === RuleFlowLanguageParser.STRING_NOT_SPECIAL_CHARS || _la === RuleFlowLanguageParser.SQUOTA_STRING)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public rulesets(): RulesetsContext {
		let _localctx: RulesetsContext = new RulesetsContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, RuleFlowLanguageParser.RULE_rulesets);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 88;
			this.match(RuleFlowLanguageParser.K_RULESET);
			this.state = 89;
			this.name();
			this.state = 91;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				{
				this.state = 90;
				this.ruleset_condition();
				}
				break;
			}
			this.state = 94;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 93;
				this.rules();
				}
				}
				this.state = 96;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === RuleFlowLanguageParser.STRING_NOT_SPECIAL_CHARS || _la === RuleFlowLanguageParser.SQUOTA_STRING);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ruleset_condition(): Ruleset_conditionContext {
		let _localctx: Ruleset_conditionContext = new Ruleset_conditionContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, RuleFlowLanguageParser.RULE_ruleset_condition);
		try {
			this.state = 106;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 98;
				this.expr(0);
				this.state = 99;
				this.match(RuleFlowLanguageParser.K_THEN);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 101;
				this.match(RuleFlowLanguageParser.L_PAREN);
				this.state = 102;
				this.expr(0);
				this.state = 103;
				this.match(RuleFlowLanguageParser.R_PAREN);
				this.state = 104;
				this.match(RuleFlowLanguageParser.K_THEN);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public rules(): RulesContext {
		let _localctx: RulesContext = new RulesContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, RuleFlowLanguageParser.RULE_rules);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 108;
			this.name();
			this.state = 110;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				{
				this.state = 109;
				this.match(RuleFlowLanguageParser.L_PAREN);
				}
				break;
			}
			this.state = 112;
			this.rule_body();
			this.state = 114;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === RuleFlowLanguageParser.R_PAREN) {
				{
				this.state = 113;
				this.match(RuleFlowLanguageParser.R_PAREN);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public rule_body(): Rule_bodyContext {
		let _localctx: Rule_bodyContext = new Rule_bodyContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, RuleFlowLanguageParser.RULE_rule_body);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 116;
			this.expr(0);
			this.state = 127;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case RuleFlowLanguageParser.K_THEN:
				{
				{
				this.state = 117;
				this.match(RuleFlowLanguageParser.K_THEN);
				this.state = 119;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 8, this._ctx) ) {
				case 1:
					{
					this.state = 118;
					_la = this._input.LA(1);
					if (!(_la === RuleFlowLanguageParser.K_WITH || _la === RuleFlowLanguageParser.K_AND)) {
					this._errHandler.recoverInline(this);
					} else {
						if (this._input.LA(1) === Token.EOF) {
							this.matchedEOF = true;
						}

						this._errHandler.reportMatch(this);
						this.consume();
					}
					}
					break;
				}
				this.state = 121;
				_localctx._then_result = this.actions();
				}
				}
				break;
			case RuleFlowLanguageParser.K_RETURN:
				{
				{
				this.state = 122;
				this.match(RuleFlowLanguageParser.K_RETURN);
				this.state = 123;
				_localctx._result = this.return_result();
				this.state = 125;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 30)) & ~0x1F) === 0 && ((1 << (_la - 30)) & ((1 << (RuleFlowLanguageParser.K_ACTION - 30)) | (1 << (RuleFlowLanguageParser.K_WITH - 30)) | (1 << (RuleFlowLanguageParser.K_AND - 30)))) !== 0) || _la === RuleFlowLanguageParser.ID) {
					{
					this.state = 124;
					this.actions();
					}
				}

				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public name(): NameContext {
		let _localctx: NameContext = new NameContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, RuleFlowLanguageParser.RULE_name);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 129;
			this.string_literal();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public default_clause(): Default_clauseContext {
		let _localctx: Default_clauseContext = new Default_clauseContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, RuleFlowLanguageParser.RULE_default_clause);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 131;
			this.match(RuleFlowLanguageParser.K_DEFAULT);
			this.state = 133;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === RuleFlowLanguageParser.K_RETURN || _la === RuleFlowLanguageParser.K_THEN) {
				{
				this.state = 132;
				_la = this._input.LA(1);
				if (!(_la === RuleFlowLanguageParser.K_RETURN || _la === RuleFlowLanguageParser.K_THEN)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
			}
